--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,10 @@ dist
 dist-ssr
 *.local
 
+/info
+/public/Resume*
+src/assets/profile.jpeg
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
